@@ -325,6 +325,7 @@ https://github.com/elastic/beats/compare/v6.2.3...master[Check the HEAD diff]
 - Release prometheus collector metricset as GA. {pull}7660[7660]
 - Add Elasticsearch `cluster_stats` metricset. {pull}7638[7638]
 - Added `basepath` setting for HTTP-based metricsets {pull}7700[7700]
+- Add metrics about cache size to memcached module {pull}7740[7740]
 
 *Packetbeat*
 
